--- a/index.html
+++ b/index.html
@@ -13,5 +13,18 @@
     <a>Page1</a>
     <a>Page2</a>
     <a>Page3</a>
+    <footer>
+        <p>Random Links to create a display</p>
+        <ul>
+            <a href="http://google.com">Google</a>
+            <a href="http://youtube.com">Youtube</a>
+            <a href="http://twitch.tv">Twitch</a>
+            <a href="http://google.com">Google</a>
+            <a href="https://stackoverflow.com/">Stackoverflow</a>
+            <a href="https://developer.mozilla.org/pt-BR/">MDN</a>
+            <a href="https://www.dio.me/">Digital Innovation One</a>
+            <a href="https://www.edx.org/course/introduction-computer-science-harvardx-cs50x">CS50</a>
+        </ul>
+    </footer>
 </body>
 </html>
