--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Rafael Kenzo Mippo">
+    <link rel="stylesheet" href="index.css">
     <title>Mippo's Page</title>
 </head>
 <body>
     <h1 class="title">R. K. Mippo</h1>
     <h2 class="subTitle">My pages</h2>
-    <a>Page1</a>
-    <a>Page2</a>
-    <a>Page3</a>
+    <main>
+        <a>Page1</a>
+        <a>Page2</a>
+        <a>Page3</a>
+    </main>
     <footer>
-        <p>Random Links to create a display</p>
-        <ul>
-            <a href="http://google.com">Google</a>
-            <a href="http://youtube.com">Youtube</a>
-            <a href="http://twitch.tv">Twitch</a>
-            <a href="http://google.com">Google</a>
-            <a href="https://stackoverflow.com/">Stackoverflow</a>
-            <a href="https://developer.mozilla.org/pt-BR/">MDN</a>
-            <a href="https://www.dio.me/">Digital Innovation One</a>
-            <a href="https://www.edx.org/course/introduction-computer-science-harvardx-cs50x">CS50</a>
-        </ul>
+        <a href="http://google.com">Google</a>
+        <a href="http://youtube.com">Youtube</a>
+        <a href="http://twitch.tv">Twitch</a>
+        <a href="http://google.com">Google</a>
+        <a href="https://stackoverflow.com/">Stackoverflow</a>
+        <a href="https://developer.mozilla.org/pt-BR/">MDN</a>
+        <a href="https://www.dio.me/">Digital Innovation One</a>
+        <a href="https://www.edx.org/course/introduction-computer-science-harvardx-cs50x">CS50</a>
     </footer>
 </body>
 </html>
